--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: 'ETH Zurich'
-    description: 'Research Danny van der Haven'
+    description: 'Research of Danny van der Haven'
     twitter: ''
   analytics:
     google_analytics: ''
@@ -50,7 +50,7 @@ footer:
 # Localization
 locale:
   date_format: 'Jan 2, 2006'
-  time_format: '3:04 PM'
+  time_format: '13:04'
 
 # Site features
 features:
