--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,11 +4,11 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Home
     url: /
     weight: 10
   - name: Papers
-    url: /#papers
+    url: publication/
     weight: 11
   - name: Talks
     url: /#talks
@@ -22,6 +22,6 @@ main:
   - name: Projects
     url: projects/
     weight: 30
-  - name: Teaching
-    url: teaching/
-    weight: 40
+#  - name: Teaching
+#    url: teaching/
+#    weight: 40
