--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,17 +4,17 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: Biography
     url: /
     weight: 10
-  - name: Papers
+  - name: Publications
     url: publication/
     weight: 11
   - name: Talks
-    url: /#talks
+    url: event/
     weight: 12
   - name: News
-    url: /#news
+    url: post/
     weight: 13
   - name: Experience
     url: experience/
