--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -7,6 +7,7 @@
 title: van der Haven
 # Website URL
 baseURL: 'vanderhaven.info'
+favicon: '/favicon.ico'
 
 ############################
 ## LANGUAGE
