--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,10 +4,9 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: van der Haven
+title: Danny van der Haven
 # Website URL
 baseURL: 'vanderhaven.info'
-favicon: '/favicon.ico'
 
 ############################
 ## LANGUAGE
