--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -42,7 +42,7 @@ header:
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Dingeman L.H. van der Haven. This work is licensed under {license}.'
+    notice: '© {year} Dingeman L.H. van der Haven. This work is licensed under {license}. Background image by [SVGBackgrounds.com](https://www.svgbackgrounds.com/).'
     license:
       enable: true
       allow_derivatives: false
